# veloversi

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/bench/: api.md  perft.md
docs/step/: step-01.md  step-02.md  step-03.md  step-04.md  step-05.md  step-06.md  step-07.md  step-08.md  step-09.md  step-10.md  step-11.md  step-12.md  step-13.md  step-14.md  step-15.md  step-16.md  step-17.md  step-18.md  step-19.md  step-20.md  step-21.md  step-22.md  step-23.md  step-24.md  step-25.md  step-26.md  step-27.md  step-28.md  step-29.md  step-30.md  step-31.md  step-32.md  step-33.md  step-34.md  step-35.md  step-36.md  step-37.md  step-38.md  step-39.md  step-40.md  (+2 more)
examples/: README.md  basic_usage.py  game_recording.py  generate_training_data.py  pytorch_dataloader.py  rust_value_model.py
specs/: ai_training_spec.md  rust_engine_spec.md  wasm_spec.md
src/: engine.rs  feature.rs  flip_tables.rs  learning.rs  lib.rs  nnue.rs  python.rs  random_play.rs  recording.rs  search.rs  search_eval_data.rs  serialize.rs  symmetry.rs  test_python_api.py
src/veloversi/: __init__.py  __init__.pyi  _core.pyi  bench_api.py  dataloader.py  dataloader.pyi  model.py  model.pyi
tests/: test_smoke.py
