[package]
name = "veloversi"
version = "0.2.1"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.17"
numpy = "0.27"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py312" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.12
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py312"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.14"

[dev-dependencies]
rayon = "1.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
