[project]
name = "veloversi"
version = "0.2.5"
description = "Fast Othello/Reversi library powered by Rust"
readme = "README.md"
authors = [
    { name = "Kotetsu0000", email = "61132817+Kotetsu0000@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[project.scripts]
veloversi = "veloversi:main"


[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "maturin>=1.0,<2.0",
    "numpy>=1.26",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.maturin]
module-name = "veloversi._core"
python-packages = ["veloversi"]
python-source = "src"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
